# jenga_bot

./: .gitignore  README.md  body.STL  calibrate.sh  fake_tower.sh  real_tower.sh  setupFakeur5e.sh  setupRealur5e.sh  setupVision.sh  setup_calibration_point.sh
Embedded/MTRN4231 EndEff/: platformio.ini
Embedded/MTRN4231 EndEff/src/: main.cpp  pressure sensor.cpp
SolidWorks files/: End effector.7z  assem.SLDASM  body.SLDPRT
embedded/end_eff/src/: main.cpp
image/: endeff1
solidworks/: GB - Spur gear 0.8M 30T 20PA 5FW ---S30A75H50L3.0N.SLDPRT  body version 2.SLDPRT  gripper.SLDPRT  rack spur rectangular_gb.SLDPRT  装配体3.SLDASM
src/brain_node/: README.md  package.xml  setup.cfg  setup.py
src/brain_node/brain_node/: brain.py
src/brain_node/launch/: brain.launch.py
src/end_eff_bridge/: README.md  package.xml  setup.cfg  setup.py
src/end_eff_bridge/end_eff_bridge/: serial_node.py
src/end_eff_bridge/launch/: prongs_serial.launch.py
src/gui_node/: CMakeLists.txt  jenga_rqt_plugin.xml  package.xml
src/gui_node/launch/: gui_node.launch.py  jenga_config.rviz
src/gui_node/msg/: JengaBlock.msg
src/gui_node/src/: gui_node.cpp  jenga_rqt_plugin.cpp
src/manipulation/: CMakeLists.txt  package.xml
src/manipulation/action/: Manipulation.action
src/manipulation/launch/: manipulation_launch.py
src/manipulation/src/: manipulation.cpp
src/manipulation/src/actions/: approach_move_action.hpp  base_action.hpp  constrained_move_action.hpp  free_move_action.hpp  linear_move_action.hpp  place_move_action.hpp  pull_move_action.hpp  push_block_action.hpp  push_move_action.hpp
src/object_detect/: package.xml  setup.py
src/object_detect/object_detect/: camera_calibration.py  object_detect.py
src/os_node/: CMakeLists.txt  package.xml
src/os_node/src/: main.cpp  os_node_window.cpp  os_node_window.hpp
src/os_node/test/: test_basic.cpp
src/tower_interfaces/: CMakeLists.txt  package.xml
src/tower_interfaces/msg/: Tower.msg  TowerRow.msg
src/ui_node/: README.md  package.xml  setup.cfg  setup.py
src/ui_node/ui_node/: player_gui.py  player_ui.py
src/ur_description_custom/: CMakeLists.txt  package.xml
src/ur_description_custom/SolidWorks_files/: assembly 1.SLDASM  block.SLDPRT  body 2.SLDPRT  body.SLDPRT  gripper.SLDPRT  hexagon socket head cap screw_as.SLDPRT  mount.SLDPRT  servo.SLDPRT
src/ur_description_custom/config/ur5e/: visual_parameters.yaml
src/ur_description_custom/launch/: view_ur.launch.py
src/ur_description_custom/meshes/end_eff/: Assem.STL  assem.STL  assembly.stl  body 2 1.stl  collision model.SLDPRT  collision model.STL  collision.stl  gripper.stl
src/ur_description_custom/meshes/end_eff_basic/: base.stl  finger.stl
src/ur_description_custom/test/: test_ur_urdf_xacro.py  test_view_ur_launch.py
src/ur_description_custom/urdf/: end_eff_basic.xacro  end_eff_detailed.xacro  ur.urdf.xacro  ur_macro.xacro
src/ur_moveit_config_custom/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/ur_moveit_config_custom/launch/: ur_moveit.launch.py
src/ur_moveit_config_custom/rviz/: view_robot.rviz
src/ur_moveit_config_custom/srdf/: ur.srdf.xacro  ur_macro.srdf.xacro
