<?xml version="1.0"?>
<package format="3">
  <name>gui_node</name>
  <version>0.0.1</version>
  <description>Jenga tower viewer with 3D markers and RQT plugin</description>
  <maintainer email="haoran@example.com">Haoran Wen</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 deps -->
  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>

  <!-- RViz deps -->
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>

  <!-- Interface from detection node -->
  <depend>tower_interfaces</depend>

  <!-- External node (if present) -->
  <depend>os_node</depend>

  <!-- RQT plugin deps (if you use the plugin) -->
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>
  <depend>qt_gui_cpp</depend>
  <depend>python_qt_binding</depend>
  <depend>pluginlib</depend>

  <!-- Qt (runtime) -->
  <exec_depend>qtbase5-dev</exec_depend>
  <!-- For Humble+ could switch to Qt6 -->
  <!-- <exec_depend>qtbase6-dev</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
    <!-- Export RQT plugin -->
    <rqt_gui plugin="${prefix}/share/${PROJECT_NAME}/jenga_rqt_plugin.xml"/>
  </export>
</package>
